Bug 892934 - Pass RGB image format into CreateTextureImage r=mattwoodrow a=akeybl