gfx/layers/ipc/AutoOpenSurface.h
@@ -27,6 +27,7 @@ class MOZ_STACK_CLASS AutoOpenSurface
 {
 public:
   typedef gfxASurface::gfxContentType gfxContentType;
+  typedef gfxASurface::gfxImageFormat gfxImageFormat;
 
   /** |aDescriptor| must be valid while AutoOpenSurface is
    * in scope. */
@@ -39,6 +40,7 @@ public:
    * return an answer.
    */
   gfxContentType ContentType();
+  gfxImageFormat ImageFormat();
   gfxIntSize Size();
 
   /** This can't escape the scope of AutoOpenSurface. */
